<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/i1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="@string/input1_placeholder"
        android:inputType="numberDecimal"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/i2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:hint="@string/input2_placeholder"
        android:inputType="numberDecimal"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/ans"
        android:layout_marginBottom="5sp"
        android:layout_marginTop="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/add"
            android:layout_weight="1"
            android:textSize="35sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/plus" />


        <Button
            android:id="@+id/sub"
            android:layout_width="fill_parent"
            android:textSize="35sp"
            android:layout_height="wrap_content"
            android:text="@string/minus" />

        <Button
            android:id="@+id/div"
            android:layout_width="fill_parent"
            android:textSize="35sp"
            android:layout_height="wrap_content"
            android:text="@string/div" />

    </LinearLayout>


</LinearLayout>
